@@ -1,3 +1,8 @@
+Wed Jul 16 21:21:08 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gtkoptions.c: introduce gui equivalent to "set output digits ..."
+	(suggested by Olivier Croisille)
+
 Wed Jul 16 18:49:11 2003  Joern Thyssen  <jth@gnubg.org>
 
 	Introduce flag to set the numbers of digits output for
